--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Image Previewer</string>
+    <string name="selfie">Take Selfie</string>
+    <string name="upload">Upload from Gallery</string>
+    <string name="image_placeholder">Take Selfie or Upload from Gallery</string>
 </resources>
